2000-07-18  Ulrich Drepper  <drepper@redhat.com>

	* include/libc-symbols.h: Define RETURN_ADDRESS macro.
	* dlfcn/dlopen.c: Use RETURN_ADDRESS instead of
	__builtin_return_address.
	* dlfcn/dlopenold.c: Likewise.
	* dlfcn/dlsym.c: Likewise.
	* dlfcn/dlvsym.c: Likewise.
	* elf/dl-profstub.c: Likewise.
	* malloc/malloc.c: Likewise.
	* sysdeps/generic/machine-gmon.h: Likewise.
	Based on a patch by schwidefsky@de.ibm.com.

2000-07-18  Andreas Jaeger  <aj@suse.de>

	* sysdeps/alpha/dl-machine.h (elf_machine_rela): Pass 0 instead of
	NULL to elf_machine_fixup_plt t argument to silence GCC.

	* include/string.h: Add prototype for __memchr.

	* sysdeps/alpha/memchr.S: Fix copy & error in weak_alias.

	* sysdeps/generic/memchr.c: Fix copy & paste error: Use memchr
	instead of memrchr.

2000-07-18  Ulrich Drepper  <drepper@redhat.com>

	* intl/Makefile: Make sure tst-translit is run after tst-gettext.

	* locale/C-ctype.c: Add initializers for gap elements.
	* locale/programs/ld-ctype.c (ctype_output): Write out index entries
	for gap elements.

2000-07-16  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd.c (print_version): Update copyright year.

2000-07-17  Greg McGary  <greg@mcgary.org>

	* sysdeps/unix/make-syscalls.sh: Handle new arg signature
	keyletters F, I, S, W.  Remove unused keyletter V.  Surround
	signature argnames with angle-brackets for use as word delimiters,
	and to induce syntax errors for any args not handled.  Split
	multi-echo echoes and comment each stage.
	* sysdeps/unix/common/syscalls.list: Refine & correct signatures.
	* sysdeps/unix/inet/syscalls.list: Likewise.
	* sysdeps/unix/mman/syscalls.list: Likewise.
	* sysdeps/unix/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/ia64/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/mips/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/syscalls.list: Likewise.
	* sysdeps/unix/sysv/syscalls.list: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/syscalls.list
