@@ -1,3 +1,8 @@
+2000-07-18  Greg McGary  <greg@mcgary.org>
+
+	* posix/regex.c (EXTEND_BUFFER_HIGH_BOUND): New macro.
+	(EXTEND_BUFFER): Use it.
+
 2000-07-18  Ulrich Drepper  <drepper@redhat.com>
 
 	* include/libc-symbols.h: Define RETURN_ADDRESS macro.
